@@ -1,6 +1,6 @@
 Package: stan4bart
-Version: 0.0-6
-Date: 2023-02-01
+Version: 0.0-7
+Date: 2023-03-10
 Title: Bayesian Additive Regression Trees with Stan-Sampled Parametric Extensions 
 Authors@R: c(
   person("Vincent", "Dorie", role = c("aut", "cre"), email = "vdorie@gmail.com", comment = c(ORCID = "0000-0002-9576-3064")),
